--- a/Projects/index.html
+++ b/Projects/index.html
@@ -8,15 +8,20 @@
 </head>
 <body>
     <div class="top-bar">
-        <ul class="links">
-            <li id="top-links"><img clsrc="jet.png" alt="logo"></li>
-            <li id="top-links"><a href="">Home</a></li>
-            <li id="top-links"><a href="">About</a></li>
-            <li id="top-links"><a href="">Aircraft</a></li>
-            <li id="top-links"><a href="">Services</a></li>
-            <li id="top-links"><a href="">Contact Us</a></li>
-            <li id="top-links"><a href="" id="buy-color">Buy Now</a></li>
-        </ul>
+        <div>
+            <img class="logo" src="jet.png" alt="logo">
+        </div>
+        <div class="links">
+            <ul >
+                <li id="top-links"><a href="">Home</a></li>
+                <li id="top-links"><a href="">About</a></li>
+                <li id="top-links"><a href="">Aircraft</a></li>
+                <li id="top-links"><a href="">Services</a></li>
+                <li id="top-links"><a href="">Contact Us</a></li>
+                <li id="top-links"><a href="" id="buy-color">Buy Now</a></li>
+            </ul>
+        </div>
+        
     </div>
 </body>
 </html>
