--- a/Projects/index.html
+++ b/Projects/index.html
@@ -7,21 +7,25 @@
     <title>Muffins Group</title>
 </head>
 <body>
-    <div class="top-bar">
-        <div>
-            <img class="logo" src="jet.png" alt="logo">
-        </div>
-        <div class="links">
-            <ul >
-                <li id="top-links"><a href="">Home</a></li>
-                <li id="top-links"><a href="">About</a></li>
-                <li id="top-links"><a href="">Aircraft</a></li>
-                <li id="top-links"><a href="">Services</a></li>
-                <li id="top-links"><a href="">Contact Us</a></li>
-                <li id="top-links"><a href="" id="buy-color">Buy Now</a></li>
+    <nav class="navbar">
+        <div class="menu">
+            <img src="jet.png" alt="logo">
+            <div>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Aircraft</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href="" id="buy-color">Buy Now</a></li>
             </ul>
         </div>
-        
+        </div>
+    </nav>
+    <div class="slider-top">
+        <h2>BE-102</h2>
+        <p>Nulla imperdiet sit umet magna</p>
     </div>
+    
 </body>
 </html>
