--- a/Projects/index.html
+++ b/Projects/index.html
@@ -23,8 +23,25 @@
         </div>
     </nav>
     <div class="slider-top">
-        <h2>BE-102</h2>
-        <p>Nulla imperdiet sit umet magna</p>
+        <img src="home_jet_slide_1_line.png" alt="line" class="line-img"> 
+        <div class="text-block">
+            <h2>BE-102</h2>
+            <p>Nullo impedient sit unmet magna</p>
+        </div>
+    </div>
+    <div class="img-container">
+        <div class="img-block">
+            <img src="home_jet_welcome_bg.jpg" alt="img1" class="welcome-img">
+            <div class="img-text">SED CULIS PHARETRA DUIS FINIBUS</div>
+        </div>
+        <div class="img-block">
+            <img src="home_jet_welcome_bg2.jpg" alt="img2" class="welcome-img2">
+            <div class="img-text">
+                <div class="text1">Quisque fermentum tortor nunc; sit amet dapibus dolor bibendum at? Morbi sodales rutrum tempus. Sed congue interdum massa ac.</div>
+                <div class="text1">Sed neque enim, ultrices sed sapien sit amet, volutpat dictum lorem? Duis eu ligula nec leo laoreet lobortis. Duis finibus, est sed iaculis pharetra..</div>
+            </div>
+            
+        </div>
     </div>
     
 </body>
