--- a/Projects/index.html
+++ b/Projects/index.html
@@ -17,7 +17,7 @@
                 <li><a href="">Aircraft</a></li>
                 <li><a href="">Services</a></li>
                 <li><a href="">Contact Us</a></li>
-                <li><a href="" id="buy-color">Buy Now</a></li>
+                <li><a href="checkout.html" id="buy-color">Buy Now</a></li>
             </ul>
         </div>
         </div>
@@ -43,6 +43,6 @@
             
         </div>
     </div>
-    
+    <!-- <script src="script.js"></script> -->
 </body>
 </html>
